# KAIST_PAI_BRM

./: .gitignore  README.md  analysis.py  analysis_legacy.py  anonymize.py  argparser.py  environment.yaml  experiment.py  gpal_nlt.py  gpal_nlt_backup_v0.py  gpal_nlt_backup_v1.py  kl_mean.csv  kl_mean_inliers_0.005.csv  kl_mean_original.csv  nlt_setup.py  outlier_detect.py  playground_0.py  playground_1.py  playground_2.py  plot_convergence_jsd.py  plot_convergence_kl.py  plot_convergence_kl_legacy.py  plot_mean_convergence.py  plotting_task_#0.py  plotting_task_#1.py  requirements.txt  result_analysis_BIC_comparison.py  result_analysis_noise.py  result_analysis_param_distribution_CPMs.py  simulation_ADO.py  simulation_BD.py  simulation_GPAL.py  simulation_GPALvs.BD.py  simulation_parameter_recovery_1CPM.py  simulation_parameter_recovery_2CPM.py  simulation_parameter_recovery_MLLM.py  simulation_parameter_recovery_pearson_analysis.py  simulation_scenario_NLE_ADO_MLLM.py  simulation_scenario_NLE_ADO_MLLM_misassumed.py  simulation_scenario_NLE_GPAL_MLLM.py  (+1 more)
ado/: ado.py  ado_test.py
gpal/: __init__.py  argparser.py  config.yaml  gpal_optimize.py  gpal_plot.py  gpal_plot_new.py  gpr_fit_predict.py  gpr_instance.py  gpr_next_design.py  package_test.py  pyproject.toml  utils.py
gpalexp/: __init__.py  gpal_optimize.py  gpr_instance.py  utils.py
nlt-main/: .gitignore  main.py  requirements.txt
nlt_example/: gpal_nlt.py  nlt_setup.py
nlt_main/: README.md  main.py
results/: ado_results_.csv  ado_results_0101.csv  ado_results_123.csv  ado_results_2.csv  results_.csv  (+26 more)
(+214 files in other folders)
