[project]
name = "GPALexp"
version = "0.1.0"
authors = [
    {name="Junyup Kim", email="ytrewq271828@alumni.kaist.ac.kr"},
    {name="Chaeho Lee", email=""},
    {name="Boyoung Kwon", email=""},
    {name="Sangho Lee", email="sangholee@kaist.ac.kr"}
]
description = "A package for incorporating Gaussian Process Active Learning (GPAL) in psychology experiments."
readme = "README.md"
requires-python = "3.10.18"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: Microsoft :: Windows :: Windows 11"
    "Topic :: Software Development :: Version Control :: Git"
    "Intended Audience :: Science/Research"
    "Natural Language :: English"
]
dependenceis = [
    "numpy==2.2.6",
    "matplotlib==3.10.3",
    "PyYAML==6.0.2",
    "pandas==2.3.1",
    "scipy==1.15.3",
    "scikit-learn"==1.7.1"
]